[package]
name = "ow-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
async-trait = "0.1.88"
byteorder = "1.5.0"
clap = { version = "4.5.47", features = ["derive"] }
flexi_logger = { version = "0.31.1", default-features = false, features = ["compress"] }
ieee80211 = "0.5.7"
openssl = { version = "0.10", features = ["vendored"] }
pcap = "2.2.0"
radiotap = "1.3.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "process", "net", "sync"] }
